--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -12,7 +12,7 @@
     <h1>Our Menu</h1>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6">
+      <section class="col-lg-4 col-md-6 col-sm12">
         <div class="box">
           <h2 id="t1">Chicken</h2>
 
@@ -23,9 +23,9 @@
             consectetur?
           </p>
         </div>
-      </div>
+      </section>
 
-      <div class="col-lg-4 col-md-6">
+      <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="box">
           <h2 id="t2">Beef</h2>
 
@@ -36,9 +36,9 @@
             consectetur?
           </p>
         </div>
-      </div>
+      </section>
 
-      <div class="col-lg-4 col-md-12">
+      <section class="col-lg-4 col-md-12 col-sm-12">
         <div class="box">
           <h2 id="t3">Sushi</h2>
 
@@ -49,7 +49,7 @@
             consectetur?
           </p>
         </div>
-      </div>
+      </section>
     </div>
   </body>
 </html>
